@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution of
 # this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: cmdMZ.test,v 1.15.2.8 2008/09/15 04:52:25 dgp Exp $
+# RCS: @(#) $Id: cmdMZ.test,v 1.15.2.9 2010/03/31 14:13:27 dgp Exp $
 
 if {[catch {package require tcltest 2.1}]} {
     puts stderr "Skipping tests in [info script]. tcltest 2.1 required."
@@ -96,11 +96,11 @@ test cmdMZ-return-1.0 {return checks for bad option values} -body {
     return -options foo
 } -returnCodes error -match glob -result {bad -options value:*}
 test cmdMZ-return-1.1 {return checks for bad option values} -body {
-    return -code foo
-} -returnCodes error -match glob -result {bad completion code*}
+    return -code err
+} -returnCodes error -match glob -result {bad completion code "err": must be ok, error, return, break, continue*, or an integer}
 test cmdMZ-return-1.2 {return checks for bad option values} -body {
     return -code 0x100000000
-} -returnCodes error -match glob -result {bad completion code*}
+} -returnCodes error -match glob -result {bad completion code "0x100000000": must be ok, error, return, break, continue*, or an integer}
 test cmdMZ-return-1.3 {return checks for bad option values} -body {
     return -level foo
 } -returnCodes error -match glob -result {bad -level value: *}
@@ -161,8 +161,8 @@ test cmdMZ-return-2.12 {return option handling} -body {
     return -level 0 -code error -options {-code ok}
 } -returnCodes ok -result {}
 test cmdMZ-return-2.13 {return option handling} -body {
-    return -level 0 -code error -options {-code foo}
-} -returnCodes error -match glob -result {bad completion code*}
+    return -level 0 -code error -options {-code err}
+} -returnCodes error -match glob -result {bad completion code "err": must be ok, error, return, break, continue*, or an integer}
 test cmdMZ-return-2.14 {return option handling} -body {
     return -level 0 -code error -options {-code foo -options {-code break}}
 } -returnCodes break -result {}
